<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="account__create_account">Create an Account</string>
  <string name="account__delete_account_dialog_content">Are you sure you want to delete your account?</string>
  <string name="account__delete_account_dialog_title">Delete Account</string>
  <string name="account_creation__passphrase_empty">Passphrase can\'t be empty</string>
  <string name="account_creation__passphrase_missmatch">Passphrase confirmation doesn\'t match</string>
  <string name="account_export__account_passphrase_hint">Account Passphrase</string>
  <string name="account_export__confirmation_missmatch">The encryption passphrase confirmation doesn\'t match.</string>
  <string name="account_export__encryption_passphrase_confirmation">Encryption Passphrase Confirmation</string>
  <string name="account_export__encryption_passphrase_empty">The encryption passphrase is empty.</string>
  <string name="account_export__encryption_passphrase_hint">Encryption Passphrase</string>
  <string name="account_export__export_account">Export your account</string>
  <string name="account_export__export_complete">The account export was complete.</string>
  <string name="account_export__export_encryption_label">Export Encryption</string>
  <string name="account_export__failed_to_unlock">Unable to unlock account</string>
  <string name="account_export__passphrase_empty">The passphrase is empty</string>
  <string name="account_export__path">Export Path</string>
  <string name="account_import__account_credentials_label">Account Credentials</string>
  <string name="account_import__account_file">Account File</string>
  <string name="account_import__account_passphrase_confirmation_hint">Passphrase confirmation</string>
  <string name="account_import__account_passphrase_description">Please choose a strong password for your account.</string>
  <string name="account_import__account_passphrase_hint">Passphrase</string>
  <string name="account_import__file_encryption_passphrase">File Passphrase</string>
  <string name="account_import__import_account">Import Account</string>
  <string name="app_name">Sikorka</string>
  <string name="account_import__import_success">Account was imported successfully</string>
  <string name="account_management__address_label">Account Address</string>
  <string name="network_selection__title">Select Network</string>
  <string name="network_selection__select_ropsten">Use Ropsten Test Network</string>
  <string name="network_selection__select_mainnet">Use the Main Network</string>
  <string name="network_selection__select_rinkeby">Use Rinkeby Test Network</string>
  <string name="setup_account__title_label">Setup an Account</string>
  <string name="setup_account__import_existing">Import an Existing Account</string>
  <string name="setup_account__create_new">Create New</string>
  <string name="network_selection__network_not_available">This network is currently not available</string>
  <string name="notification__sikorka_node_title">Sikorka</string>
  <string name="main_screen__title">Sikorka</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="action_settings">Settings</string>
  <string name="main_nav__exit">Exit</string>
  <string name="main_nav__accounts">Accounts</string>
  <plurals name="main_nav__network_statistics">
    <item quantity="one">%1$d Peer | %2$d of %3$d Blocks</item>
    <item quantity="other">%1$d Peers | %2$d of %3$d Blocks</item>
  </plurals>
  <string name="main_nav__header_no_balance">No balance information</string>
  <string name="main_nav_balance_eth">%s ether</string>
  <plurals name="notification__network_statistics">
    <item quantity="one">%1$d Peer | %2$d of %3$d Blocks</item>
    <item quantity="other">%1$d Peers | %2$d of %3$d Blocks</item>
  </plurals>
  <string name="dialog__passphrase_title">Verify your Passphrase</string>
  <string name="dialog__passphrase_content">In order to proceed you need to insert the passphrase for this account.</string>
  <string name="dialog__input_hint">Passphrase</string>
  <string name="deploy_contract__title">Deploy your Contract</string>
  <string name="deploy_contract__specify_contract_name">Please specify a contract name</string>
  <string name="deploy_contract__contract_creation_submitted">Contract creation submitted (%s)</string>
  <string name="confirm_deploy__gas_limit">Gas Limit</string>
  <string name="confirm_deploy__gas_price">Gas Price</string>
  <string name="confirm_deploy__header_text">You are about to deploy a contract\nYour account passphrase is needed in order to proceed.</string>
  <string name="confirm_deploy__passphrase">Passphrase</string>
  <string name="confirm_deploy__positive_button">Deploy</string>
  <string name="confirm_deploy__dialog_title">Deploy a sikorka contract</string>
  <string name="confirm_deploy__empty_passphrase">Passphrase can\'t be empty</string>
  <string name="main__loading_message">Please wait…</string>
  <string name="errors__generic_error">An error occurred.</string>
  <string name="main__contract_intration_dialog_title">Start contract interaction</string>
  <string name="main__contract_intration_dialog_content">Are you sure you want to interact with %s?</string>
  <string name="contract_interact__generic_error">There was some error during the operation.</string>
  <string name="main__no_peers_available">No peers available</string>
  <string name="wizard__no_accounts_title">No accounts available</string>
  <string name="wizard__no_accounts_content">In order to proceed you have to either create or import an account.</string>
  <string name="account_creation__password_short" tools:ignore="PluralsCandidate">You passphrase is short passphrase should be at least %d characters long.</string>
  <string name="account_management__delete_last_account_content">You must have at least one account. You cannot delete this account.</string>
  <string name="account_management__action_delete">Delete</string>
  <string name="account_management__action_export">Export</string>
  <string name="account_management__action_default">Set Default</string>
  <string name="preferences__about_title">About</string>
  <string name="title_activity_settings">Settings</string>
  <string name="preferences__about_version_title">Version</string>
  <string name="preferences__about_version_key" translatable="false">pref_key_about_version</string>
  <string name="preferences__network_key" translatable="false">pref_key_network</string>
  <string name="preferences__network_title">Network</string>
  <string name="preferences__selected_network_key" translatable="false">pref_key_selected_network</string>
  <string name="preferences__selected_network_title">Selected Network</string>
  <string name="preferences__manage_peers">Manage Peers</string>
  <string name="preferences__manage_peers_summary">Open the list of the static Ropsten network peers</string>
  <string name="networks__ropsten">Ropsten</string>
  <string name="networks__rinkeby">Rinkeby</string>
  <string name="networks__mainnet">Mainnet</string>
  <string name="main__nav_randomized_debug_location">Use randomized location</string>
  <string name="preferences__storage">Storage</string>
  <string name="preferences__usage">Usage</string>
  <string name="preferences__usage_key" translatable="false">pref_key_storage_usage</string>
  <string name="notification__not_syncing">No syncing in progress</string>
  <string name="preferences__usage_summary">The data directory uses %s</string>
  <string name="action_reload">Reload</string>
  <string name="gas_selection__gas_price">Gas Price</string>
  <string name="gas_selection__gas_limit">Gas Limit</string>
  <string name="gas_selection__dialog_title">Select Gas Price</string>
  <string name="find_detector__searching_for_detectors">Searching for detectors</string>
  <string name="find_detector__no_devices_found">No detectors found</string>
  <string name="find_detector__connecting_title">Connecting to detector</string>
  <string name="find_detector__connecting_content">Please wait while a connection is established</string>
  <string name="use_detectors__dialog_title">Use detectors</string>
  <string name="use_detectors__dialog_content">Do you want to deploy a contract that makes use of detectors?</string>
  <string name="use_detectors__positive">Yes</string>
  <string name="use_detectors__neutral">No</string>
  <string name="find_detector__title">Find Detector</string>
  <string name="find_detector__discovery_failed">Detector discovery was unsuccessful</string>
  <string name="find_detector__connection_failed">Couldn\'t establish a connection with the detector.</string>
  <string name="deploy_contract__advanced_options">Advanced Options</string>
  <string name="gas_selection__positive_text">Confirm</string>
  <string name="deploy_contract__no_gas_preferences">Gas preferences have not been set, please set manually</string>
  <string name="deploy_detector__contract_detector">Contract Detector</string>
  <string name="deploy_detector__advanced_options">Advanced Options</string>
  <string name="deploy_detector__title">Deploy Contract</string>
  <string name="deploy_detector__authorization_duration">Authorization Duration</string>
  <string name="deploy_detector__authorization_duration_unit">secs</string>
  <string name="deploy_detector__authorization_duration_not_set">Authorization duration must be greater than zero</string>
  <string name="deploy_detector__contract_name">Contract Name</string>
  <string name="select_detector_type__title">Select detector type</string>
  <string name="select_detector_type__detector_bluetooth">Bluetooth</string>
  <string name="main_nav__pending_contracts">Pending Contracts</string>
  <string name="pending_contracts__title">Pending Contracts</string>
  <string name="pending_contract__no_data_label">No Pending Contracts…</string>
  <string name="contract_deployment__status_success_notification">Contract %1$s has been successfully deployed by transaction %2$s</string>
  <string name="notification_channel__deployment_status">Deployment Status Updates</string>
  <string name="deploy_contract__name">Contract Name</string>
  <string name="interact_contract__detector_address">Detector Address</string>
  <string name="select_detector_type__detector_manual">Manually Specify</string>
  <string name="select_detector__manual_dialog_title">Specify detector address</string>
  <string name="select_detector__manual_dialog_content">Please specify the hex address of the detector</string>
  <string name="select_detector__manual_dialog_hint">Detector address</string>
  <string name="deploy_contract__token_supply">Total token supply</string>
  <string name="deploy_detector__contract_tokens">Token supply</string>
  <string name="contract_deployment__transaction_sent_title">Contract transaction sent</string>
  <string name="contract_deployment__transaction_sent_content">Your contract (%s) has been sent, you will be notified as soon as it is mined.</string>
  <string name="contact_interact__contract_address">Contract Address</string>
  <string name="select_detector_type__detector_qr">QR Code</string>
  <string name="interact_contract__interact_with_label">Interact with the detector using</string>
  <string name="contract_interact__success_title">Transaction sent</string>
  <string name="contract_interact__success_content">Your claimTokens transaction has been sent you will be notified as soon as it is mined.</string>
  <string name="contract_interact__claiming_tokens_title">Please wait</string>
  <string name="account_import__folder_button_content_description">Opens the file selection dialog</string>
  <string name="peer_manager_action__select_all">Select all</string>
  <string name="peer_manager_action__select_none">Select none</string>
  <string name="peer_manager_action__delete">Delete</string>
</resources>